<resources>
    <string name="app_name">marvelHeroes</string>
    <string name="marvel_logo">Marvel Logo</string>
    <string name="heroes">HEROES</string>
    <string name="password">password</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="email">email</string>
    <string name="sign_in">Sign in</string>
    <string name="no_have_an_account_yet_click_here_to_sign_up">No have an account yet ? <b> Sign Up!</b></string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="insert_your_password">Insert your password</string>
    <string name="full_name">full name</string>
    <string name="insert_your_full_name">Insert your full name</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">register</string>
    <string name="title_activity_home_compose">HomeComposeActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>